Adjustments to cards table relations with others; Add missing constraints